--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Redirigir al navegador a otra URL</title>
-<META HTTP-EQUIV="REFRESH" CONTENT="3;URL=https://sites.google.com/intech.edu.ar/info/home">
+<title>Redirigiendo a INTECH</title>
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://sites.google.com/intech.edu.ar/info/home">
 </head>
 <body>
-Esta página te redigirá en 0 segundos a https://sites.google.com/intech.edu.ar/info/home/
+Esta página te redigirá en 3 segundos a INTECH
 </body>
 </html> 
