--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://sites.google.com/intech.edu.ar/info/home">
 </head>
 <body>
-Esta página te redigirá en 3 segundos a INTECH
+Redirigiendo a INTECH
 </body>
 </html> 
